# OOP_lab4

./: CMakeLists.txt  main.cpp
include/: Array.h  Figure.h  Hexagon.h  Pentagon.h  Point.h  Rhombus.h
test/: tests.cpp
